fixs before proof prop4.6

--- a/JASA/a.bib
+++ b/JASA/a.bib
@@ -689,5 +689,14 @@ year={2007}
     author = {Peixoto, Tiago P.},
     year = {2014},
     keywords = {all, complex networks, graph, network, other}}
+@inproceedings{dulac2017study,
+    title={A Study of Stochastic Mixed Membership Models for Link Prediction in Social Networks},
+    author={Dulac, Adrien and Gaussier, Eric and Largeron, Christine},
+    booktitle={Data Science and Advanced Analytics (DSAA), 2017 IEEE International Conference on},
+    pages={706--715},
+    year={2017},
+    organization={IEEE}
+}
+
 
 
