--- a/JASA/content/models.tex
+++ b/JASA/content/models.tex
@@ -34,7 +34,7 @@ The non-parametric version \imb\ parallels this development but considers, in li
 \item Generate the class membership distributions $\mat{F}_{N \times \infty}$:
    \begin{align}
        \bm{\beta} &\sim \gem(\gamma) \nonumber \\
-    \mat{f}_i &\sim \DP(\alpha_0, \beta) \quad\text{ for }  i \in \{1, .., N\} \nonumber
+    \mat{f}_i &\sim \DP(\alpha_0, \beta) \quad\text{ for }  i \in \{1, \dotsc, N\} \nonumber
    \end{align}
 where $\gem$ (named after Griffiths, Engen and McCloskey) denotes the Stick Breaking Process distribution over the set of natural numbers and $\DP$ a Dirichlet Process \cite{HDP};
 \item Generate a weight matrix for each latent class from i.i.d Beta distribution:\\
