--- a/JASA/content/related.tex
+++ b/JASA/content/related.tex
@@ -11,7 +11,7 @@ Orbanz and Roy  pointed out that models belonging to the family of infinitely ex
 
 % Concerning the homophily effect, \cite{hoff2008modeling} pointed out that the latent eigen model (called MLFM, an extension of LFM) can comply with both homophily and stochastic equivalence in undirected graphs but without providing a formal definitions of these properties. Furthermore, Li \textit{et al.}, suggest that the latent eigen model  MLFM fails to model homophily  for directed graphs and, for correcting that, designed the GLFM model \cite{Li11}.~\\
 
-A preliminary version of this study was published in \cite{dulac-dsaa}. However, the definitions of preferential attachment and local degrees we proposed in this previous paper are not entirely satisfying inasmuch as the dynamic aspect of preferential attachment was not taken into account. The definitions we propose here and the developments concerning stochastic block models are new and we believe better founded than in this previous work.
+A preliminary version of this study was published in \cite{dulac2017study}. However, the definitions of preferential attachment and local degrees we proposed in this previous paper are not entirely satisfying inasmuch as the dynamic aspect of preferential attachment was not taken into account. The definitions we propose here and the developments concerning stochastic block models are new and we believe better founded than in this previous work.
 
 We study, in a theoretical way, how the non-parametric versions of the classical stochastic mixed membership models handle preferential attachment. For this purpose, we introduce formal definitions of this phenomenon and then study how the models behave with respect  to these definitions but, first,  we present these models and the settings in which we study their behavior.
 
