--- a/JASA/jasa.tex
+++ b/JASA/jasa.tex
@@ -53,6 +53,10 @@
 \newcommand{\entropy}{\mathbb{H}}
 \newcommand{\gem}{\mathrm{GEM}}
 \newcommand{\Mult}{\mathrm{Mult}}
+\newcommand{\Bern}{\mathrm{Bern}}
+\newcommand{\Dir}{\mathrm{Dir}}
+\newcommand{\Beta}{\mathrm{Beta}}
+\newcommand{\Poisson}{\mathrm{Poi}}
 \newcommand{\DP}{\mathrm{DP}}
 \newcommand{\IBP}{\mathrm{IBP}}
 \newcommand{\V}{\mathcal{V}}
