--- a/JASA/content/models.tex
+++ b/JASA/content/models.tex
@@ -62,7 +62,7 @@ We have this time four real hyper-parameters, two for the Hierarchical Dirichlet
 	\label{fig:mmm}
 \end{figure}
 
-\paragraph{Settings} In a Bayesian context, the set of hyper-parameters underlying the model considered is known. This set, denoted $\mg$, respectively corresponds to $\alpha$ and $\sigma_w$ for \ifm\ and to $\gamma$,  $\alpha_0$, $\lambda_0$ and $\lambda_1$ for \imb. For mixed membership models, the evidence $\p(Y|\mg)$ has no closed form solution. Yet, the random graph $G$ is exchangeable so that, for any permutation $\pi$ on integers, one has:
+\paragraph{Settings} In a Bayesian context, the set of hyper-parameters underlying the model considered is known. This set, denoted $\mg$, respectively corresponds to $\alpha$ and $\sigma_w$ for \ifm\ and to $\gamma$,  $\alpha_0$, $\lambda_0$ and $\lambda_1$ for \imb. For mixed membership models, the evidence $\p(Y|\mg)$ has no closed-form solution. Yet, the random graph $G$ is exchangeable so that, for any permutation $\pi$ on integers, one has:
 %
 \[
 P((y_{ij})_{i,j\in \mathcal{R}} | \mg) = P((y_{\pi(i)\pi(j)})_{i,j\in \mathcal{R}} | \mg)
