--- a/JASA/content/preferential_v2.tex
+++ b/JASA/content/preferential_v2.tex
@@ -183,12 +183,12 @@ But one has
 \end{equation*}
 and
 \begin{equation*}
-\int_x^1 t^{a-1}(1-t)^{b-1}dt \leq (1-x)^{b-1}\int_x^1 t^{a-1}dt = (1-x)^{b-1}\frac{(1-x^a)^b}{a}
+\int_x^1 t^{a-1}(1-t)^{b-1}dt \leq (1-x)^{b-1}\int_x^1 t^{a-1}dt = (1-x)^{b-1}\frac{(1-x^a)}{a}
 \end{equation*}
 Thus one can show that
 \begin{align*}
 Cg'(x) &\geq x^{a-1} \frac{1-qx-\epsilon}{b} -q\frac{1-x^a}{a}  \\
-        &= \frac{1}{abF_k^N} \left[ ax^{a-1}(1-\epsilon)F_k^N + F_k^P (b(x^a-1) - x^a) \right]
+        &= \frac{1}{abF_k^N} \left[ ax^{a-1}(1-\epsilon)F_k^N + F_k^P (b(x^a-1) - ax^a) \right]
 \end{align*}
 with $C$ is a positive constant. Thus, A sufficient condition for $g$ to be increasing is that
 \begin{align*}
